[package]
name = "orengine"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
winit = "0.29"
wgpu = "0.19"
pollster = "0.3" 
env_logger = "0.11" # Optionnel mais utile pour le debug
log = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
tobj = { version = "4.0", features = ["ahash"] }
image = "0.25.9"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"